tests/diagnostics_golden/diag_lifetime_violation.txt
Diagnostics Golden: Lifetime Violation
Source: tests/negative/neg_own_lifetime.safe

Expected diagnostic output:
------------------------------------------------------------------------
neg_own_lifetime.safe:19:14: error: returned borrow value cannot outlive lender 'owner'
  |
  | 19 |       return ref;  -- ERROR: borrowed value outlives local owner
  |    |              ^~~
  |
  note: borrowed and observed values must remain within the lender lifetime.
  note: rule: Safe §2.3.3 / §2.3.4a (lifetime containment)
------------------------------------------------------------------------
